mdapi/unpackaged/objects/Basecamp_Version_Activation__e.object
<CustomObject>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_ID__c</fullName>
        <label>Version ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Version Activation</label>
    <pluralLabel>Version Activations</pluralLabel>
</CustomObject>